--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     , "bcrypt": ">=0.5.0"
     , "connect-mongo": ">=0.1.9"
     , "connect": ">= 1.8.5 < 2"
+    , "socket.io": ">= 0.9.9"
   },
   "engines": {
         "node": "0.6.X",
