--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
-    , "mongoose-auth": ">=0.0.11"
-    , "mongoose": "=2.5.1"
+    , "mongoose-auth": "0.0.12"
+    , "mongoose": "2.5.1"
     , "everyauth": "==0.2.30"
     , "bcrypt": ">=0.5.0"
     , "connect-mongo": ">=0.1.9"
