--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     , "everyauth": "==0.2.30"
     , "bcrypt": ">=0.5.0"
     , "connect-mongo": ">=0.1.9"
-    , "connect": ">= 1.8.5 < 2"
+    , "connect": ">= 1.8.5"
     , "socket.io": ">= 0.9.9"
   },
   "engines": {
