--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   , "version": "0.0.1"
   , "private": false
   , "dependencies": {
-      "express": ">= 2.5.8"
+      "express": "2.5.8"
     , "jade": ">= 0.0.1"
+    , "mongoose-auth": ">=0.0.11"
     , "mongoose": ">=2.5.1"
-    , "mongoose-auth": "0.0.12"
     , "everyauth": "==0.2.30"
     , "bcrypt": ">=0.5.0"
     , "connect-mongo": ">=0.1.9"
-    , "connect": ">= 1.8.5"
+    , "connect": ">= 1.8.5 < 2"
     , "socket.io": ">= 0.9.9"
   },
   "engines": {
         "node": "0.6.X",
-        "npm":  "1.1.x"
+        "npm":  "1.0.x"
   }, "devDependencies": {
       "mocha": ">=0.11.0"
     , "should": ">=0.5.1"
