--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
-    , "mongoose-auth": ">=0.0.11"
+    , "mongoose-auth": "0.0.11"
     , "mongoose": ">=2.5.1"
     , "everyauth": "==0.2.30"
     , "bcrypt": ">=0.5.0"
@@ -15,7 +15,7 @@
   },
   "engines": {
         "node": "0.6.X",
-        "npm":  "1.1.x"
+        "npm":  "1.0.x"
   }, "devDependencies": {
       "mocha": ">=0.11.0"
     , "should": ">=0.5.1"
