--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   , "version": "0.0.1"
   , "private": false
   , "dependencies": {
-      "express": "2.5.8"
+      "express": ">= 2.5.8"
     , "jade": ">= 0.0.1"
-    , "mongoose-auth": "0.0.11"
-    , "mongoose": ">=2.5.1"
+    , "mongoose-auth": ">= 0.0.11"
+    , "mongoose": ">=2.7.1"
     , "everyauth": "==0.2.30"
     , "bcrypt": ">=0.5.0"
-    , "connect-mongo": ">=0.1.9"
+    , "connect-mongo": "0.1.9"
     , "connect": ">= 1.8.5 < 2"
     , "socket.io": ">= 0.9.9"
     , "xmldom": "0.1.11"
